--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <html xmlns=http://www.w3.org/1999/xhtml>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<title>Michiel's Git Achievements</title>
+<title>Michiel Verboven's Git Achievements</title>
 <link rel="alternate" type="application/rss+xml" title="rss feed" href="index.rss"/>
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Cabin+Sketch:bold"/>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
 
-<h1>Michiel's Git Achievements</h1>
-Unlocked 23/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 63 points<br>
+<h1>Michiel Verboven's Git Achievements</h1>
+Unlocked 23/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 67 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Banker (Level 1)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Banker (Level 2)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
@@ -45,34 +46,34 @@ Unlocked 23/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1184 rev-parse
-    394 symbolic-ref
+   1246 rev-parse
+    425 symbolic-ref
     282 diff-index
-    138 diff
-     67 --git-dir=.git
+    139 diff
+     71 --git-dir=.git
      39 achievements
-     33 checkout
-     23 config
-     17 st
-     17 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+     34 checkout
+     28 config
+     20 st
+     20 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+     19 lola
      16 log
-     15 lola
      12 help
-      6 merge
+      7 merge
       6 lol
       5 gc
+      5 commit
       5 branch
       5 br
-      4 commit
-      4 add
+      5 add
       3 status
       3 rebase
+      3 fetch
       2 whatchanged
       2 stash
       2 show-branch
       2 show
       2 push
-      2 fetch
       2 bundle
       2 bisect
       1 init
