--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 23/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 70 points<br>
+Unlocked 23/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 74 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Banker (Level 1)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Banker (Level 2)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
+<li><div class="title">Apprentice Banker (Level 3)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Butcher (Level 1)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Butcher (Level 2)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
@@ -47,20 +48,20 @@ Unlocked 23/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1248 rev-parse
-    426 symbolic-ref
+   1256 rev-parse
+    430 symbolic-ref
     282 diff-index
     139 diff
-     71 --git-dir=.git
+     75 --git-dir=.git
      39 achievements
-     34 checkout
+     35 checkout
      28 config
      21 --git-dir=/home/michiel/SNaP/snap-ramp/.git
      20 st
-     19 lola
+     20 lola
      16 log
      12 help
-      7 merge
+      8 merge
       6 lol
       5 gc
       5 commit
