--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 24/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 88 points<br>
+Unlocked 24/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 92 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -41,6 +41,7 @@ Unlocked 24/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 2)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
@@ -52,28 +53,28 @@ Unlocked 24/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1439 rev-parse
-    514 symbolic-ref
+   1475 rev-parse
+    532 symbolic-ref
     282 diff-index
     146 diff
     102 --git-dir=.git
      47 achievements
      41 checkout
-     37 log
-     31 config
-     28 st
+     38 log
+     32 config
+     30 st
      24 lola
-     21 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+     24 --git-dir=/home/michiel/SNaP/snap-ramp/.git
      12 help
      11 merge
-      7 commit
+      8 commit
+      7 add
       6 lol
       6 branch
+      5 rebase
       5 gc
       5 fetch
       5 br
-      5 add
-      4 rebase
       3 status
       2 whatchanged
       2 stash
