--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 25/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 94 points<br>
+Unlocked 25/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 97 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -39,6 +39,7 @@ Unlocked 25/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice News Reader (Level 1)</div>  <div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
 <li><div class="title">Apprentice Presenter (Level 1)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
+<li><div class="title">Apprentice Product Manager (Level 2)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 2)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -54,42 +55,47 @@ Unlocked 25/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1477 rev-parse
-    533 symbolic-ref
+   1713 rev-parse
+    649 symbolic-ref
     282 diff-index
-    146 diff
+    149 diff
     102 --git-dir=.git
+     56 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+     50 st
+     49 checkout
      47 achievements
-     41 checkout
-     38 log
+     40 log
      32 config
-     30 st
-     24 lola
-     24 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-     12 help
-     11 merge
-      8 commit
-      8 add
+     28 lola
+     14 add
+     13 help
+     12 merge
+     11 commit
+      8 br
+      7 rebase
+      7 gc
+      7 branch
       6 lol
-      6 branch
-      5 rebase
-      5 gc
       5 fetch
-      5 br
+      4 stash
+      4 difftool
       3 status
+      3 push
+      3 ls-remote
       2 whatchanged
-      2 stash
       2 show-branch
       2 show
-      2 push
+      2 reset
+      2 describe
       2 clean
       2 bundle
       2 blame
       2 bisect
+      1 pull
+      1 ls-files
       1 init
       1 --help
       1 --git-dir=
-      1 difftool
       1 clone
 </pre>
 <script type="text/javascript">
