New achievement Product Manager (Level 4)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 27/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 174 points<br>
+Unlocked 27/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 179 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -65,21 +65,22 @@ Unlocked 27/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 <li><div class="title">Weaver</div>  <div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   3015 rev-parse
-   1282 symbolic-ref
+   3045 rev-parse
+   1297 symbolic-ref
     282 diff-index
-    272 log
+    274 log
     181 diff
-    140 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    144 --git-dir=/home/michiel/SNaP/snap-ramp/.git
     123 --git-dir=.git
      95 st
-     68 checkout
+     75 checkout
      55 achievements
      40 lola
      35 config
@@ -89,8 +90,8 @@ Git commands sorted by usage:
      23 add
      19 rebase
      17 difftool
+     16 stash
      15 br
-     14 stash
      12 merge
       8 gc
       7 branch
