New achievement Apprentice Collector (Level 3)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 242 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 246 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -31,6 +31,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Cleaning lady (Level 1)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
+<li><div class="title">Apprentice Collector (Level 3)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Delivery Boy (Level 2)</div>  <div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
 <li><div class="title">Apprentice Delivery Boy (Level 3)</div>  <div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
 <li><div class="title">Apprentice Gardner (Level 1)</div>  <div class="info">Shows the commit ancestry graph with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show-branch.html">git-show-branch</a></div></li>
@@ -87,40 +88,41 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   6401 rev-parse
-   2967 symbolic-ref
-    440 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+   6677 rev-parse
+   3105 symbolic-ref
+    459 --git-dir=/home/michiel/SNaP/snap-ramp/.git
     282 diff-index
     274 log
-    248 diff
-    193 st
-    180 checkout
-    169 lola
-    142 --git-dir=.git
+    253 diff
+    200 st
+    189 checkout
+    176 lola
+    152 --git-dir=.git
      84 stash
-     63 br
-     62 help
+     66 br
+     64 help
      60 achievements
-     48 commit
-     46 lol
-     45 add
-     39 difftool
+     54 lol
+     50 commit
+     47 add
+     41 difftool
      37 config
-     28 rebase
-     26 merge
-     20 push
-     17 branch
+     33 rebase
+     29 merge
+     23 push
+     19 branch
      16 show
+     13 tag
+     12 ls-remote
+     11 remote
      11 blame
-     10 tag
      10 gc
      10 bundle
-      9 ls-remote
+      8 fetch
       7 fsck
       6 status
       6 reset
       6 pull
-      6 fetch
       4 describe
       4 clone
       3 reflog
@@ -133,7 +135,6 @@ Git commands sorted by usage:
       2 clean
       2 bisect
       2 am
-      1 remote
       1 ls-files
       1 init
       1 --help
