New achievement Stone Mason (Level 6)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 257 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 264 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -85,38 +85,39 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Stone Mason (Level 6)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 <li><div class="title">Weaver</div>  <div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   6753 rev-parse
-   3143 symbolic-ref
-    459 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+   7405 rev-parse
+   3469 symbolic-ref
+    532 --git-dir=/home/michiel/SNaP/snap-ramp/.git
     282 diff-index
     274 log
-    253 diff
-    201 st
-    191 checkout
-    181 lola
-    159 --git-dir=.git
-     84 stash
-     67 help
-     66 br
+    274 diff
+    219 st
+    208 checkout
+    196 lola
+    174 --git-dir=.git
+     93 stash
+     75 br
+     70 help
+     65 lol
      60 achievements
-     54 lol
-     50 commit
-     47 add
-     41 difftool
-     37 config
-     33 rebase
-     31 merge
-     24 push
-     19 branch
-     16 show
-     14 fetch
-     13 tag
-     13 remote
+     55 commit
+     55 add
+     46 difftool
+     39 config
+     35 rebase
+     33 merge
+     31 branch
+     28 push
+     18 show
+     17 fetch
+     15 tag
+     14 remote
      12 ls-remote
      11 blame
      10 gc
@@ -125,15 +126,15 @@ Git commands sorted by usage:
       6 status
       6 reset
       6 pull
+      5 format-patch
+      4 reflog
       4 describe
       4 clone
-      3 reflog
       3 --git-dir=
       3 for-each-ref
       2 whatchanged
       2 show-branch
       2 revert
-      2 format-patch
       2 clean
       2 bisect
       2 am
