New achievement Gipsy (Level 6)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 293 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 300 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -74,6 +74,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Delivery Boy (Level 4)</div>  <div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Gipsy (Level 4)</div>  <div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
+<li><div class="title">Gipsy (Level 6)</div>  <div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Goldsmith (Level 4)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Goldsmith (Level 5)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -97,31 +98,31 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   8443 rev-parse
-   3916 symbolic-ref
-    624 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    300 diff
-    286 st
+   9363 rev-parse
+   4374 symbolic-ref
+    672 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    333 st
+    316 diff
     282 diff-index
-    274 log
-    234 checkout
-    224 lola
+    276 log
+    254 lola
+    246 checkout
     175 --git-dir=.git
-    112 stash
-     84 help
-     83 br
-     72 add
-     67 lol
-     67 commit
+    133 stash
+     89 add
+     88 help
+     88 br
+     77 commit
+     73 lol
+     67 difftool
      60 achievements
-     55 difftool
-     40 push
+     42 push
+     42 merge
+     40 rebase
      40 config
-     39 merge
-     38 rebase
-     38 branch
-     27 tag
-     24 show
+     40 branch
+     32 tag
+     30 show
      17 fetch
      14 remote
      12 ls-remote
