New achievement Blacksmith (Level 5)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 300 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 306 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -68,6 +68,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Banker (Level 5)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Blacksmith (Level 4)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
+<li><div class="title">Blacksmith (Level 5)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Butcher (Level 4)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -98,30 +99,30 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   9363 rev-parse
-   4374 symbolic-ref
-    672 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    333 st
-    316 diff
+   9459 rev-parse
+   4422 symbolic-ref
+    699 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    335 st
+    317 diff
     282 diff-index
     276 log
-    254 lola
-    246 checkout
+    258 lola
+    252 checkout
     175 --git-dir=.git
     133 stash
-     89 add
-     88 help
-     88 br
-     77 commit
+     95 br
+     90 add
+     89 help
+     78 commit
      73 lol
      67 difftool
      60 achievements
-     42 push
-     42 merge
+     47 push
+     44 merge
      40 rebase
      40 config
      40 branch
-     32 tag
+     33 tag
      30 show
      17 fetch
      14 remote
