New achievement Socialite (Level 6)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 306 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 313 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -91,6 +91,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Socialite (Level 6)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 6)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -99,46 +100,47 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   9459 rev-parse
-   4422 symbolic-ref
-    699 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    335 st
-    317 diff
+  10679 rev-parse
+   5035 symbolic-ref
+    783 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    387 st
+    333 diff
+    301 lola
+    283 checkout
     282 diff-index
-    276 log
-    258 lola
-    252 checkout
-    175 --git-dir=.git
-    133 stash
-     95 br
-     90 add
-     89 help
-     78 commit
-     73 lol
-     67 difftool
+    280 log
+    185 --git-dir=.git
+    141 stash
+    114 br
+    107 add
+     99 help
+     97 commit
+     79 lol
+     79 difftool
+     64 push
      60 achievements
-     47 push
-     44 merge
+     52 merge
+     50 tag
+     41 branch
      40 rebase
      40 config
-     40 branch
-     33 tag
-     30 show
+     31 show
      17 fetch
+     17 bundle
      14 remote
      12 ls-remote
+     11 gc
      11 blame
-     10 gc
-     10 bundle
+      9 --git-dir=
       9 format-patch
       7 reset
       7 reflog
       7 fsck
+      7 clone
       6 status
       6 pull
-      5 clone
-      4 describe
-      3 --git-dir=
+      5 describe
+      4 init
       3 for-each-ref
       2 whatchanged
       2 show-branch
@@ -146,8 +148,9 @@ Git commands sorted by usage:
       2 clean
       2 bisect
       2 am
+      1 rm
+      1 prune
       1 ls-files
-      1 init
       1 --help
 </pre>
 <script type="text/javascript">
