Publishing updated achievement

--- a/index.html
+++ b/index.html
@@ -102,44 +102,45 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  11179 rev-parse
-   5285 symbolic-ref
-    835 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    401 st
-    343 diff
-    322 lola
-    299 checkout
+  11467 rev-parse
+   5429 symbolic-ref
+    844 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    404 st
+    347 diff
+    329 lola
+    305 checkout
     282 diff-index
     280 log
-    212 --git-dir=.git
-    146 stash
-    135 br
+    215 --git-dir=.git
+    152 stash
+    142 br
     113 add
-    104 help
-    104 commit
+    109 help
+    105 commit
      86 difftool
-     80 lol
-     75 push
-     60 achievements
-     59 merge
-     52 tag
+     81 lol
+     77 push
+     61 achievements
+     60 merge
+     56 tag
+     43 ign
      41 config
      41 branch
      40 rebase
-     31 show
-     22 ls-remote
+     33 show
+     23 ls-remote
      18 remote
      18 fetch
      17 bundle
      11 gc
      11 blame
+     10 clone
       9 pull
       9 --git-dir=
       9 format-patch
+      8 reflog
       7 reset
-      7 reflog
       7 fsck
-      7 clone
       6 status
       5 describe
       4 init
