New achievement Seamstress (Level 5)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 371 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 377 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -98,6 +98,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
+<li><div class="title">Seamstress (Level 5)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 6)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -109,32 +110,32 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  18347 rev-parse
-   8874 symbolic-ref
-   1327 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    611 st
-    566 lola
-    509 diff
-    433 checkout
+  19232 rev-parse
+   9318 symbolic-ref
+   1402 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    637 st
+    585 lola
+    525 diff
+    458 checkout
+    285 log
     282 diff-index
-    281 log
+    215 br
     215 --git-dir=.git
-    205 br
-    196 difftool
-    190 stash
-    186 help
-    182 add
-    179 commit
-    137 push
-    118 tag
-     93 merge
+    212 difftool
+    209 add
+    204 commit
+    199 help
+    197 stash
+    147 push
+    136 tag
+     99 merge
      87 lol
-     80 branch
+     81 branch
      62 achievements
      48 config
+     45 rebase
      43 ign
-     40 rebase
-     37 show
+     39 show
      23 ls-remote
      20 remote
      18 fetch
@@ -142,10 +143,10 @@ Git commands sorted by usage:
      17 bundle
      14 --git-dir=
      12 gc
+     11 pull
      11 format-patch
      11 blame
       9 reflog
-      9 pull
       9 describe
       7 reset
       7 fsck
@@ -156,15 +157,15 @@ Git commands sorted by usage:
       2 whatchanged
       2 show-branch
       2 revert
-      2 --git-dir=/home/michiel/SNaP/temp-checkout/snap-ramp/.git
       2 clean
       2 bisect
       2 apply
       2 am
+      2 --git-dir=/home/michiel/SNaP/temp-checkout/snap-ramp/.git
       1 prune
       1 ls-files
-      1 --help
       1 annotate
+      1 --help
 </pre>
 <script type="text/javascript">
 function showLocked() {
